# UCM-AgBot-ROS2

./: .gitignore  .gitmodules  LICENSE  README.md
agbot/path_follow/: package.xml  setup.cfg  setup.py
agbot/path_follow/path_follow/: send_waypoints.py
agbot/path_follow/paths/: s_shape_waypoints.yaml  sqaure_waypoints.yaml  u_shape_waypoints.yaml
agbot/plots_python/: package.xml  setup.cfg  setup.py
agbot/plots_python/plots_python/: xy_plot.py
agbot/robot_bringup/: package.xml  setup.py
agbot/robot_bringup/config/: ekf_params.yaml
agbot/robot_bringup/launch/: all_in_one.launch.py  bringup.launch.py  bringup_nav2.launch.py  display.launch.py  localization.launch.py  map_publisher.launch.py  navigation.launch.py  navigation_exp.launch.py  navigation_launch.py  sample.py  sensors.launch.py  sensors_arm.launch.py  slam.launch.py  specific_sensors.launch.py
agbot/robot_bringup/maps/: empty_map.yaml  empty_world.pgm
agbot/robot_bringup/params/: agbot.yaml  ekf_params.yaml
agbot/robot_bringup/robot_bringup/: MotorController.py  debugger.py  joint_state.py  joint_state_pub.py  motor_cmd.py  motor_cmds.py  motor_control.py  path_control.py  robot_controller.py  robot_state_pub.py  robot_velocity_pub.py  wheel_odometry.py
agbot/robot_bringup/rviz/: navigation.rviz  urdf.rviz
agbot/robot_bringup/urdf/: robot_description.urdf  robot_description.urdf.xacro
agbot/robot_control/: CMakeLists.txt  package.xml
agbot/robot_control/src/: motor_cmds.hpp  motor_controller.cpp  motor_controller_debug.cpp  motor_datasender.cpp  test.cpp
agbot/robot_description/: CMakeLists.txt  package.xml
agbot/robot_description/rviz/: urdf.rviz
agbot/robot_description/urdf/: robot_description.urdf.xacro
agbot/robot_simulator/: CMakeLists.txt  package.xml
agbot/robot_simulator/config/: ekf.yaml  ekf_gps.yaml
agbot/robot_simulator/launch/: bringup.launch.py  localization_launch.py  myrobot_state_publisher.launch.py  navigation.launch.py  navigation_exp.launch.py  navigation_launch.py  simulation.launch.py  tb3.launch.py
agbot/robot_simulator/maps/: orchard.pgm  orchard.yaml  orchard_irr.pgm  orchard_irr.yaml
agbot/robot_simulator/models/my_robot/: my_robot.sdf  my_robot.urdf
agbot/robot_simulator/models/orchard/: model_1.config  model_1.sdf
agbot/robot_simulator/params/: agbot_gazebo.yaml  agbot_gazebo_exp.yaml
agbot/robot_simulator/rviz/: agbot.rviz
agbot/robot_simulator/urdf_sim/: robot_description_gazebo.urdf  robot_description_gazebo.urdf.xacro  sam_bot_description.urdf
agbot/robot_simulator/worlds/: my_world.sdf  orchard.world
costum_interfaces/: CMakeLists.txt  package.xml
costum_interfaces/msg/: WheelEncoders.msg
custom_interfaces/: CMakeLists.txt  package.xml
custom_interfaces/msg/: LeafPoseArrays.msg  NanoSpec.msg
custom_interfaces/srv/: GetSpectrum.srv
devices/onrobot_grippers/onrobot_rg_control/launch/: bringup_server.launch.py
interfaces/: CMakeLists.txt  package.xml
robot_interfaces/: CMakeLists.txt  package.xml
sensors/: package.xml  setup.py
sensors/encoders/: CMakeLists.txt  encoders.cpp  encoders.ino  encoders.py  package.xml
sensors/encoders/encoder_unoR3/: encoder_unoR3.ino
sensors/encoders/encoder_unoWifi/: encoder_unoWifi.ino
sensors/encoders/src/: wheel_encoder_pub.cpp
sensors/encoders/src/encoder_unoWifi/: encoder_unoWifi.ino
sensors/nanospec/: setup.py
sensors/nanospec/nanospec/: NSP32_client_node.py  NSP32_client_triggered.py  NSP32_service_node.py
sensors/nanospec/src/: Beginner.py  SpectrumMeter.py
sensors/params/: sensor_params.yaml
sensors/rtk_gnss/: package.xml  setup.cfg  setup.py
sensors/rtk_gnss/params/: sensor_params.yaml
sensors/rtk_gnss/rtk_gnss/: RTK_GNSS.py
sensors/rtk_gnss/scripts/: RTK_GNSS.py
sensors/sensors/: RTK_GPS.py  test.py
sensors/sllidar_ros2/launch/: sllidar_s1_launch.py
sensors/sllidar_ros2/src/: sllidar_node.cpp
sensors/src/: RTK_GPS.py
vision/leaf_extraction/: package.xml  setup.cfg  setup.py
vision/leaf_extraction/leaf_extraction/: instance_segmentation.py  instance_segmentation_v1.py  instance_segmentation_v2.py  instance_segmentation_v3.py
